src/analysis/LgsParserAdapter.cpp
#include "analysis/LgsParserAdapter.h"
#include "funcs/LgsCoroutine.h"
#include "files/LgsEnvFile.h"
#include "files/LgsInterfaceFile.h"
#include "LogosLexer.h"
#include "LogosParser.h"
#include "exprs/unary/LgsCast.h"
#include "exprs/LgsNull.h"
#include "exprs/LgsBinaryExpr.h"
#include "exprs/unary/constants/LgsCharConst.h"
#include "exprs/unary/constants/LgsFloatConst.h"
#include "exprs/unary/constants/LgsStrConst.h"
#include "exprs/unary/LgsInstance.h"
#include "exprs/unary/LgsSelection.h"
#include <exprs/unary/LgsArrayExpr.h>
#include <exprs/unary/LgsIterIndex.h>
#include <exprs/unary/LgsFuncCall.h>
#include <exprs/unary/LgsVariable.h>
#include "funcs/LgsParam.h"
#include "stmts/LgsField.h"
#include "stmts/LgsReturn.h"
#include "stmts/LgsBreak.h"
#include "stmts/LgsContinue.h"
#include "types/LgsEnum.h"
#include "exprs/unary/LgsHashMap.h"
#include "exprs/unary/LgsPostfixExpr.h"
#include "exprs/unary/LgsPrefixExpr.h"
#include "exprs/unary/LgsTypeExpr.h"
#include "exprs/unary/LgsVectorExpr.h"
#include "files/LgsAppFile.h"
#include "files/LgsMainFile.h"
#include "files/LgsObjectFile.h"
#include "files/LgsTestFile.h"
#include "funcs/LgsMainFunc.h"
#include "lgsc/LgsCLang.h"
#include "loops/LgsInfiniteLoop.h"
#include "stmts/LgsAssignment.h"
#include "stmts/LgsIOPair.h"
#include "stmts/LgsIOStmt.h"
#include "stmts/LgsIfStmt.h"
#include "stmts/LgsVarDec.h"
#include "types/LgsDArray.h"
#include "types/LgsGroup.h"
#include "types/LgsInterface.h"
#include "types/LgsMap.h"
#include "types/LgsNullable.h"
#include "types/LgsUnknown.h"
#include "types/primitives/LgsDouble.h"
#include "types/primitives/LgsShort.h"
#include "types/primitives/LgsSize.h"
#include "types/primitives/LgsUInt.h"
#include "utils/LgsUtils.h"
#include <loops/LgsLoopMetaVar.h>
#include <loops/LgsForeachLoop.h>
#include <loops/LgsRangeLoop.h>
#include <loops/LgsWhileLoop.h>
#include <stmts/LgsDeferStmt.h>
#include <types/LgsStr.h>
#include <types/LgsVoid.h>

LgsFile* LgsParserAdapter::parseFile(const fs::path& filePath) {
    const auto absFilePath = fs::path(fs::canonical(filePath));
    const auto codeText = getFileText(absFilePath);
    antlr4::ANTLRInputStream input(codeText);
    LogosLexer lexer(&input);
    antlr4::CommonTokenStream tokens(&lexer);
    LogosParser parser(&tokens);
    const auto file = parser.logosFile();
    checkParserErrors(&parser);
    return getLogosFile(file, absFilePath);
}

LgsFile* LgsParserAdapter::getLogosFile(LogosParser::LogosFileContext* ctx, const fs::path& filePath) {
    LgsFile* file = nullptr;
    if (const auto mainFile = ctx->mainFile()) {
        file = getMainFile(mainFile, filePath);
    } else if (const auto objFile = ctx->objectFile()) {
        file = getObjectFile(objFile, filePath);
    } else if (const auto interfaceFile = ctx->interfaceFile()) {
        file = getInterfaceFile(interfaceFile, filePath);
    } else if (const auto testFile = ctx->testFile()) {
        file = getTestFile(testFile, filePath);
    }
    assert(file);
    if (ctx->extern_()) {
        LgsCLang lgsCLang(paths);
        for (const auto importPath : ctx->extern_()->STRING()) {
            file->externalCPaths.emplace_back(getStrConst(importPath));
            lgsCLang.resolveCFiles(file);
            if (!lgsCLang.errHandler.successful) {
                errHandler.mergeErrors(lgsCLang.errHandler);
            }
        }
    }
    return file;
}

LgsMainFile* LgsParserAdapter::getMainFile(LogosParser::MainFileContext* ctx, const fs::path& filePath) {
    const auto funcs = ctx->func();
    const auto file = new LgsMainFile(fileID, filePath);
    setLocation(file->location, ctx->start);

    for (const auto enumDeclaration : ctx->enumDeclaration()) {
        auto lgsEnum = getEnum(enumDeclaration);
        file->enums.emplace_back(lgsEnum);
        addFileSymbol(file, LgsSymbol(lgsEnum));
    }

    for (const auto object : ctx->object()) {
        auto lgsObject = getObject(object->objectBody(), object->IDENTIFIER(), !!object->SINGLETON());
        if (!lgsObject) continue;
        file->objects.emplace_back(lgsObject);
        addFileSymbol(file, LgsSymbol(lgsObject));
    }

    for (const auto interface : ctx->interface()) {
        auto lgsInterface = getInterface(interface->interfaceBody(), interface->IDENTIFIER());
        file->interfaces.push_back(lgsInterface);
        addFileSymbol(file, LgsSymbol(lgsInterface));
    }

    for (const auto func : funcs) {
        auto funcName = func->funcSignature()->funcSignatureHeader()->IDENTIFIER()->getText();
        if (funcName == LGS_MAIN_FUNC_NAME) {
            file->funcs[funcName] = getMainFunc(func);
        } else {
            const auto lgsFunc = getFunc(func);
            file->funcs[funcName] = lgsFunc;
            addFileSymbol(file, LgsSymbol(lgsFunc));
        }
    }

    for (const auto group : ctx->group()) {
        const auto lgsGroup = getGroup(group);
        file->groups.push_back(lgsGroup);
        addFileSymbol(file, LgsSymbol(lgsGroup));
    }
    return file;
}

LgsObjectFile* LgsParserAdapter::getObjectFile(LogosParser::ObjectFileContext* ctx, const fs::path& filePath) {
    const auto objName = ctx->IDENTIFIER();
    const auto file = new LgsObjectFile(fileID, objName->getText(), filePath);
    setLocation(file->location, ctx->start);
    file->obj = getObject(ctx->objectBody(), objName, !!ctx->SINGLETON());
    globals.addSymbol(LgsSymbol(file->obj), &errHandler);
    return file;
}

LgsFile* LgsParserAdapter::getInterfaceFile(LogosParser::InterfaceFileContext* ctx, const fs::path& filePath) {
    const auto interfaceNameToken = ctx->IDENTIFIER();
    const auto file = new LgsInterfaceFile(fileID, interfaceNameToken->getText(), filePath);
    setLocation(file->location, ctx->start);
    file->interface = getInterface(ctx->interfaceBody(), interfaceNameToken);
    globals.addSymbol(LgsSymbol(file->interface), &errHandler);
    return file;
}

LgsFile* LgsParserAdapter::getTestFile(LogosParser::TestFileContext* ctx, const fs::path& filePath) {
    const auto file = new LgsTestFile(fileID, ctx->IDENTIFIER()->getText(), filePath);
    setLocation(file->location, ctx->start);
    for (const auto& func : ctx->func()) {
        const auto lgsFunc = getFunc(func);
        if (startsWith(lgsFunc->funcType->name, "test")) {
            lgsFunc->funcType->isTest = true;
            file->tests.push_back(lgsFunc);
        } else {
            file->funcs.push_back(lgsFunc);
        }
    }
    return file;
}

LgsEnvFile* LgsParserAdapter::getEnvFile(const fs::path& filePath) {
    const auto absFilePath = fs::path(fs::canonical(filePath));
    const auto codeText = getFileText(absFilePath);
    antlr4::ANTLRInputStream input(codeText);
    LogosLexer lexer(&input);
    antlr4::CommonTokenStream tokens(&lexer);
    LogosParser parser(&tokens);
    const auto ctx = parser.logosEnvFile();
    std::vector<LgsVarDec*> varDecs;
    for (const auto& explicitVarDec : ctx->explicitVarDec()) {
        varDecs.emplace_back(getExplicitVarDec(explicitVarDec));
    }
    for (const auto& implicitVarDec : ctx->implicitVarDec()) {
        varDecs.emplace_back(getImplicitVarDec(implicitVarDec));
    }
    auto file = new LgsEnvFile(fileID, "EnvFile", absFilePath, varDecs);
    if (!checkParserErrors(&parser)) return file;
    return file;
}

void LgsParserAdapter::setAppConfigs(LgsAppConfigs& appConfigs) {
    if (!fs::exists(paths.appFilePath)) return;
    auto codeText = getFileText(paths.appFilePath);
    antlr4::ANTLRInputStream input(codeText);
    LogosLexer lexer(&input);
    antlr4::CommonTokenStream tokens(&lexer);
    LogosParser parser(&tokens);
    if (!checkParserErrors(&parser)) return;
    const auto ctx = parser.logosAppFile();
    LgsAppFile lgsAppFile(fileID, paths.appFilePath);
    setLocation(lgsAppFile.location, ctx->start);
    for (int i = 0; i < ctx->IDENTIFIER().size(); ++i) {
        const auto varToken = ctx->IDENTIFIER()[i];
        const auto varName = varToken->getText();
        const auto expr = getExpr(ctx->expr()[i]);
        if (!expr) continue;
        if (varName == "name") {
            appConfigs.name = expr->asStrConst()->value;
        }
        if (varName == "version") {
            auto versionStr = expr->asStrConst()->value;
            int consumed = 0;
            auto [major, minor, micro] = appConfigs.version;
            const auto s = std::sscanf(versionStr.c_str(), "%d.%d.%d%n", &major, &minor, &micro, &consumed) == 3;
            if (!s || versionStr[consumed] != '\0') {
                errHandler.addError(E10068, &lgsAppFile.location, {versionStr});
            }
        }
        if (varName == "activeEnv") {
            appConfigs.activeEnv = expr->asStrConst()->value;
        }
        freeExpr(expr);
    }

    const auto requireEnvs = ctx->requireEnvVars();
    if (!requireEnvs) return;
    for (int i = 0; i < requireEnvs->type().size(); ++i) {
        const auto name = requireEnvs->IDENTIFIER()[i]->getText();
        const auto type = getType(requireEnvs->type()[i]);
        const auto varDec = new LgsVarDec(name, nullptr);
        varDec->type = type;
        lgsAppFile.requireEnvVars.push_back(varDec);
    }

    const auto packages = ctx->requirePackages();
    if (!packages) return;
    for (const auto packagePath : packages->STRING()) {
        auto pathText = packagePath->getText();
        cleanStr(pathText);
        lgsAppFile.requirePackages.push_back(pathText);
    }
}

LgsObject* LgsParserAdapter::getObject(LogosParser::ObjectBodyContext* ctx, antlr4::tree::TerminalNode* objName, const bool isSingleton) {
    const auto obj = new LgsObject(objName->getText());
    setLocation(obj->location, objName->getSymbol());
    if (!validateTypeName(obj->name, &obj->location)) return obj;

    // Fields
    for (int i = 0; i < ctx->field().size(); ++i) {
        const auto lgsField = getField(ctx->field(i), i);
        const auto fieldAdded = obj->addField(lgsField);
        if (!fieldAdded) {
            errHandler.addError(E10056, &obj->location, {obj->name, lgsField->name});
        }
    }

    // Methods
    for (const auto& func : ctx->method()) {
        const auto method = getMethod(func, obj);
        const auto methodAdded = obj->addMethod(method);
        if (!methodAdded) {
            errHandler.addError(E10072, &obj->location, {obj->name, method->funcType->pname()});
        }
    }

    // IO Pairs
    for (const auto& ioPair : ctx->ioPair()) {
        const auto lgsIOPair = getIOPair(ioPair);
        obj->ioPairs.push_back(lgsIOPair);
    }

    // Interfaces
    if (ctx->implements()) {
        for (const auto& type : ctx->implements()->IDENTIFIER()) {
            auto implementType = getTypeFromText(type);
            obj->interfaces.push_back(implementType);
        }
    }

    if (isSingleton) {
        obj->singleton = new LgsInstance(obj);
    }

    return obj;
}

LgsInterface* LgsParserAdapter::getInterface(LogosParser::InterfaceBodyContext* ctx, antlr4::tree::TerminalNode* interfaceName) {
    const auto interface = new LgsInterface(interfaceName->getText());
    setLocation(interface->location, interfaceName->getSymbol());
    if (!validateTypeName(interface->name, &interface->location)) return interface;

    if (ctx->implements()) {
        for (const auto& type : ctx->implements()->IDENTIFIER()) {
            auto implementType = getTypeFromText(type);
            interface->interfaces.push_back(implementType);
        }
    }

    for (int i = 0; i < ctx->interfaceField().size(); ++i) {
        const auto interfaceField = ctx->interfaceField()[i];
        const auto field = getInterfaceField(interfaceField);
        field->isOptional = !!interfaceField->QUEST_MARK();
        field->isVirtual = true;
        interface->addField(field);
    }

    for (const auto& interfaceFunc : ctx->interfaceFunc()) {
        const auto type = getFuncReturnType(interfaceFunc->type());
        const auto funcName = interfaceFunc->funcSignatureHeader()->IDENTIFIER();
        const auto func = new LgsFunc(funcName->getText(), type);
        currentFunc = func;
        setLocation(func->location, funcName->getSymbol());
        func->funcType->parentName = interface->name;
        func->funcType->isPublic = true;
        func->funcType->isVirtual = !func->stmtsBlock;
        func->funcType->isOptional = !!interfaceFunc->QUEST_MARK();
        setParams(func->funcType, interfaceFunc->funcSignatureHeader()->param());
        func->stmtsBlock = getStmtBlock(interfaceFunc->statementsBlock());
        currentFunc = nullptr;
        interface->addMethod(func);
    }
    return interface;
}

LgsFunc* LgsParserAdapter::getFunc(LogosParser::FuncContext* ctx) {
    const auto rt = getFuncReturnType(ctx->funcSignature()->type());
    const auto funcSignature = ctx->funcSignature();
    const auto funcNameToken = funcSignature->funcSignatureHeader()->IDENTIFIER();
    const auto funcName = funcNameToken->getText();
    const auto func = new LgsFunc(funcName, rt);
    currentFunc = func;
    setLocation(func->location, funcNameToken->getSymbol());
    setParams(func->funcType, funcSignature->funcSignatureHeader()->param());
    func->stmtsBlock = getStmtBlock(ctx->statementsBlock());
    currentFunc = nullptr;
    return func;
}

LgsMainFunc* LgsParserAdapter::getMainFunc(LogosParser::FuncContext* ctx) {
    const auto mainFunc = new LgsMainFunc();
    currentFunc = mainFunc;
    const auto funcSignature = ctx->funcSignature();
    setLocation(mainFunc->location, funcSignature->funcSignatureHeader()->IDENTIFIER()->getSymbol());
    mainFunc->stmtsBlock = getStmtBlock(ctx->statementsBlock());
    bool isValid = true;
    const auto paramSize = funcSignature->funcSignatureHeader()->param().size();
    if (paramSize > 1) {
        isValid = false;
    } else if (paramSize == 1) {
        isValid = setMainArgsParam(mainFunc, funcSignature);
        if (isValid) mainFunc->setMainArgs();
    }
    if (!isValid) {
        errHandler.addError(E10039, &mainFunc->location);
    }
    currentFunc = nullptr;
    return mainFunc;
}

LgsFunc* LgsParserAdapter::getLambda(LogosParser::LambdaContext* ctx) {
    const auto func = new LgsFunc(LGS_ANONYMOUS_STR);
    currentFunc = func;
    func->funcType->isLambda = true;
    func->funcType->rt = getType(ctx->rt);
    if (const auto singleParam = ctx->IDENTIFIER()) {
        auto lgsParam = LgsParam(nullptr, singleParam->getText());
        setLocation(lgsParam.location, singleParam->getSymbol());
        func->funcType->params.push_back(lgsParam);
    } else if (const auto params = ctx->lambdaParams()) {
        for (const auto lambdaParam : params->lambdaParam()) {
            const auto param = lambdaParam->IDENTIFIER();
            const auto type = getType(lambdaParam->type());
            auto lgsParam = LgsParam(type, param->getText());
            setLocation(lgsParam.location, param->getSymbol());
            func->funcType->params.push_back(lgsParam);
        }
    }
    func->stmtsBlock = getStmtBlock(ctx->statementsBlock());
    setLocation(func->location, ctx->start);
    currentFunc = nullptr;
    return func;
}

LgsFunc* LgsParserAdapter::getMethod(LogosParser::MethodContext* ctx, LgsType* obj) {
    const auto rt = getFuncReturnType(ctx->funcSignature()->type());
    const auto funcSignature = ctx->funcSignature();
    const auto nameToken = funcSignature->funcSignatureHeader()->IDENTIFIER();
    const auto method = new LgsFunc(nameToken->getText(), rt);
    currentFunc = method;
    setLocation(method->location, nameToken->getSymbol());
    method->funcType->parentName = obj->getName();
    setParams(method->funcType, funcSignature->funcSignatureHeader()->param());
    method->stmtsBlock = getStmtBlock(ctx->statementsBlock());
    if (ctx->VISIBILITY()) {
        method->funcType->isPublic = true;
    }
    if (method->funcType->isMethod) {
        method->funcType->params.insert(method->funcType->params.begin(), LgsParam(obj, LGS_SELF));
    }
    currentFunc = nullptr;
    return method;
}

LgsField* LgsParserAdapter::getField(LogosParser::FieldContext* ctx, const size_t position) {
    const auto name = ctx->IDENTIFIER()->getText();
    const auto type = getType(ctx->type());
    const auto expr = getExpr(ctx->expr());
    const auto field = new LgsField(name, type, expr);
    field->isPublic = !!ctx->VISIBILITY();
    field->isConst = ctx->CONST() != nullptr;
    field->position = position;
    setLocation(field->location, ctx->start);
    return field;
}

LgsField* LgsParserAdapter::getInterfaceField(LogosParser::InterfaceFieldContext* ctx) {
    const auto name = ctx->IDENTIFIER()->getText();
    const auto type = getType(ctx->type());
    const auto expr = getExpr(ctx->expr());
    const auto field = new LgsField(name, type, expr);
    field->isConst = ctx->CONST() != nullptr;
    setLocation(field->location, ctx->start);
    return field;
}

LgsParam LgsParserAdapter::getParam(LgsFuncType* funcType, LogosParser::ParamContext* param) {
    const auto variableName = param->IDENTIFIER()->getText();
    const auto expr = getExpr(param->expr());
    auto lgsParam = LgsParam(getType(param->type()), variableName, expr);
    setLocation(lgsParam.location, param->start);
    if (param->TRIPLE_DOT()) {
        lgsParam.isVariadic = true;
        funcType->isVariadic = true;
    } else if (lgsParam.expr) {
        funcType->hasDefaults = true;
    }
    return lgsParam;
}

LgsIOPair* LgsParserAdapter::getIOPair(const LogosParser::IoPairContext* ioPair) const {
    const auto lgsIOPair = new LgsIOPair(ioPair->opening->getText(), ioPair->closing->getText());
    setLocation(lgsIOPair->location, ioPair->start);
    return lgsIOPair;
}

LgsStmt* LgsParserAdapter::getDeferStmt(LogosParser::DeferStmtContext* ctx) {
    const auto deferStmt = new LgsDeferStmt();
    if (const auto funcCall = ctx->funcCall()) {
        deferStmt->funcCall = getFuncCall(funcCall);
    } else if (const auto selection = ctx->selection()) {
        deferStmt->selection = getSelection(selection);
    } else {
        assert(0);
    }
    setLocation(deferStmt->location, ctx->start);
    return deferStmt;
}

LgsStmt* LgsParserAdapter::getStmt(LogosParser::StatementContext* ctx) {
    if (const auto expr = ctx->expr()) return getExpr(expr);
    if (const auto ifStmt = ctx->ifStatement()) return getIfStatement(ifStmt);
    if (const auto fieldDef = ctx->assignment()) return getAssignment(fieldDef);
    if (const auto implicitVarDec = ctx->implicitVarDec()) return getImplicitVarDec(implicitVarDec);
    if (const auto explicitVarDec = ctx->explicitVarDec()) return getExplicitVarDec(explicitVarDec);
    if (const auto patternMatching = ctx->patternMatching()) return getPatternMatching(patternMatching);
    if (const auto loopStmt = ctx->loopStatement()) return getForLoop(loopStmt);
    if (const auto coroutine = ctx->coroutine()) return getCoroutine(coroutine);
    if (const auto deferStmt = ctx->deferStmt()) return getDeferStmt(deferStmt);
    if (const auto returnStmt = ctx->returnStatement()) return getReturnStmt(returnStmt);
    if (const auto breakStmt = ctx->breakStmt()) return getBreakStmt(breakStmt);
    if (const auto ioStmt = ctx->ioStatement()) return getIOStmt(ioStmt);
    if (ctx->CONTINUE()) return getContinueStmt(ctx);
    assert(0);
}

LgsStmtsBlock* LgsParserAdapter::getStmtBlock(LogosParser::StatementsBlockContext* ctx) {
    if (!ctx) return nullptr;
    const auto stmtBlock = new LgsStmtsBlock();
    setLocation(stmtBlock->location, ctx->start);
    for (const auto& statement : ctx->statement()) {
        auto stmt = getStmt(statement);
        stmtBlock->stmts.push_back(stmt);
    }
    return stmtBlock;
}

LgsEnum* LgsParserAdapter::getEnum(LogosParser::EnumDeclarationContext* ctx) {
    const auto lgsEnum = new LgsEnum(ctx->IDENTIFIER()->getText());
    setLocation(lgsEnum->location, ctx->start);
    if (!validateTypeName(lgsEnum->name, &lgsEnum->location)) return lgsEnum;
    std::unordered_set<std::string> seenNames;
    for (size_t i = 0; i < ctx->enumField().size(); ++i) {
        const auto enumField = ctx->enumField()[i];
        const auto enumFieldName = enumField->IDENTIFIER()->getText();
        if (!seenNames.insert(enumFieldName).second) {
            errHandler.addError(E10064, &lgsEnum->location, {enumFieldName, lgsEnum->name});
            break;
        }
        const auto field = new LgsField(enumFieldName, lgsEnum);
        if (enumField->STRING()) {
            field->expr = getStrConst(enumField->STRING());
        }
        setLocation(field->location, ctx->start);
        lgsEnum->fields.push_back(field);
    }
    return lgsEnum;
}
